# weak-driven-prompt-optimization

./: .gitignore  Gemini-Prompt Optimization Research Plan.md  LICENSE  README.md  idea.md  main.py  manual_report.md  pyproject.toml  test_connection.py  toy_config.yaml
.checkpoints/toy-test-01/: config.json
.kittify/: config.yaml  metadata.yaml
.kittify/memory/: constitution.md
.kittify/scripts/: validate_encoding.py
.kittify/workspaces/: 001-weak-driven-prompt-optimization-experiment-WP01.json  001-weak-driven-prompt-optimization-experiment-WP03.json  001-weak-driven-prompt-optimization-experiment-WP04.json  001-weak-driven-prompt-optimization-experiment-WP05.json  001-weak-driven-prompt-optimization-experiment-WP06.json
kitty-specs/001-weak-driven-prompt-optimization-experiment/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/001-weak-driven-prompt-optimization-experiment/checklists/: requirements.md
kitty-specs/001-weak-driven-prompt-optimization-experiment/contracts/: interfaces.md
src/evaluation/: exporter.py  loaders.py  metrics.py
src/models/: domain.py
src/optimization/: modules.py  optimizer.py
src/reporting/: analyzer.py
src/runner/: executors.py  orchestrator.py  state.py
src/utils/: llm_client.py  observability.py
tests/: mock_llm.py
tests/integration/: test_models.py  test_pipeline.py  test_state_manager.py  test_utils.py  test_wp02.py  test_wp03.py  test_wp05.py  test_wp06.py
(+12 files in other folders)
